--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : "alexhuang1029" # Username
   lastfm           : # Username
-  linkedin         : "alex-huang-205676291" # Username
+  linkedin         : "alexhuang1029" # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
