pdf added, needs to be commited online

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  name        : "Alex Huang"
+  uri         : "http://alexhuang1029.github.io/"
+  email       : "alexahuanga1029@gmail.com"
+  bio         : "Nice to meet you!"
+  avatar      : "1716338755365.jpeg"
   twitter     : "name"
   google_plus : "Name"
 
