--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,21 +1,21 @@
 # main links links
 main:
-  - title: "Projects"
-    url: /projects/
+  #- title: "Projects"
+  #  url: /projects/
+
+  # - title: "Teaching"
+  #  url: /teaching/   
+
+  - title: "Portfolio"
+    url: /portfolio/
 
   - title: "Publications"
     url: /publications/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
-  - title: "Portfolio"
-    url: /portfolio/
         
   - title: "Blog Posts"
     url: /year-archive/
     
-  - title: "CV"
+  - title: "Resume"
     url: /cv/
     
   - title: "Guide"
