updated details, fixed table

--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   avatar           : "1716338755365.jpeg"
   name             : "Alex Huang"
   pronouns         : # example: "she/her"  
-  location         : "Chandler, AZ"
-  employer         : "Hamilton High School"
+  location         : "Dallas, TX"
+  employer         : "University of Texas at Dallas"
   uri              : # URL
   email            : alexahuanga1029@gmail.com
 
