--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "alexhuang1029/alexhuang1029.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "1716338755365.jpeg"
+  avatar           : "headshot.jpeg"
   name             : "Alex Huang"
   pronouns         : # example: "she/her"  
   location         : "Dallas, TX"
