--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,7 +5,7 @@ Name Name:
   uri         : "http://alexhuang1029.github.io/"
   email       : "alexahuanga1029@gmail.com"
   bio         : "Nice to meet you!"
-  avatar      : "1716338755365.jpeg"
+  avatar      : "headshot.jpeg"
   twitter     : "name"
   google_plus : "Name"
 
